GEN-30525 - EutPathDB plugin will not find some organisms that are in the database
Get list of organisms for search dynamically from the server from the wadl
Parse wadl xml using JAXB and classes automatically generated from the wadl using the xjc utility
Rewrite tests to no longer require PowerMock and to do actual online queries of the real server
Change the mechanism of the Locus Tag searches to use Locus Tag when query string looks like a list of one or more gene IDs
Change dependency in Gradle to specify Geneiious 9.1.8 and source and target Java 8 instead of 6.