@@ -26,14 +26,12 @@ repositories {
 }
 
 dependencies {
-    compile group: "com.biomatters", name: "geneious.publicapi", version: "7.1.5", configuration: "api"
+    compile group: "com.biomatters", name: "geneious.publicapi", version: "9.1.8", configuration: "api"
     compile group: "com.google.code.gson", name: "gson", version: "2.3.1"
     compile group: "org.glassfish.jersey.core", name: "jersey-client", version: "2.22.2"
 
     testCompile "junit:junit:4.+"
-    testCompile group: "org.powermock", name: "powermock-api-mockito", version: "1.6.2"
-    testCompile group: "org.powermock", name: "powermock-module-junit4", version: "1.6.2"
-    testRuntime group: "com.biomatters", name: "geneious.publicapi", version: "7.1.5", configuration: "runtime"
+    testRuntime group: "com.biomatters", name: "geneious.publicapi", version: "9.1.8", configuration: "runtime"
 }
 
 def geneiousFilesName="GeneiousFiles";  // Name of the directory containing the Geneious distirbution files.
@@ -54,7 +52,7 @@ tasks.test {
     workingDir file("$dependencyCacheDir/$geneiousFilesName")
     minHeapSize '256M'
     maxHeapSize '1024M'
-    jvmArgs '-ea', '-XX:MaxNewSize=40M', '-XX:MaxPermSize=256M', '-XX:ReservedCodeCacheSize=128m', '-Xss512K'
+    jvmArgs '-ea', '-XX:MaxNewSize=40M', '-XX:ReservedCodeCacheSize=128m', '-Xss512K'
     environment "DISPLAY", ":0.0"
     environment "DYLD_LIBRARY_PATH", "/Library/Application Support/Geneious/Frameworks"
 }
@@ -65,8 +63,8 @@ jar {
 }
 
 compileJava {
-    sourceCompatibility "1.6"
-    targetCompatibility "1.6"
+    sourceCompatibility "1.8"
+    targetCompatibility "1.8"
 }
 
 sourceSets {
@@ -139,7 +137,7 @@ task runGeneious(dependsOn: [extractGeneiousRuntimeFiles,build], type: JavaExec)
     workingDir file("$dependencyCacheDir/$geneiousFilesName")
     minHeapSize '256M'
     maxHeapSize '1024M'
-    jvmArgs '-XX:+UseCompressedOops', '-XX:+UseConcMarkSweepGC', '-ea', '-Xss512K', '-XX:MaxPermSize=256M','-Djava.util.logging.config.file=no_logging.properties'
+    jvmArgs '-XX:+UseCompressedOops', '-XX:+UseConcMarkSweepGC', '-ea', '-Xss512K', '-Djava.util.logging.config.file=no_logging.properties'
     environment "DISPLAY", ":0.0"
     environment "LD_LIBRARY_PATH", "./activation/linux64:./native_libs/linux64"
     environment "DYLD_LIBRARY_PATH", "./activation/macos:./native_libs/macos"
